--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         <li><a href="#more">More</a></li>
       </ul>
     </nav>
-    <div class="content">contents</div>
+    <div class="content">
+      <div class="following">
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+        <div class="recent"></div>
+      </div>
+    </div>
   </body>
 </html>
